@@ -11,6 +11,8 @@ Version 1.6+svn:
    * new translations: Icelandic
    * updated translations: British English, Catalan, Chinese (Simplified),
      Czech, German, Finnish, Hebrew, Italian, Russian, Slovak, Turkish
+ * Multiplayer server:
+     * Implemented automatic saving of game replays.
  * Miscellaneous and bugfixes:
    * Fixed an infinite loop issue when no music tracks could be loaded
    * Fixed compilation with -D_GLIBCXX_PARALLEL
